fixed color contrast preferences

--- a/lesson02/css/small.css
+++ b/lesson02/css/small.css
@@ -17,7 +17,9 @@ h2 {
 h3 {
     font-family: 'Crimson Text', serif;
     font-size: 27px;
-    color: #f6c453;
+    color: #000000;
+    background-color: #b7d8b1;
+    
     
 }
 a {
@@ -26,6 +28,7 @@ a {
 p {
     font-size: 2rem;
     text-align: center;
+    color: black;
 }
 main{
     margin: 2rem;
@@ -50,5 +53,9 @@ footer {
     padding-bottom: 20px;
 }
 #byui-website {
-    color:white;
+    color:black;
+}
+
+footer {
+    color: black;
 }
